--- a/WorkshopAgents/01 - deepseek-tool-calling-101.ipynb
+++ b/WorkshopAgents/01 - deepseek-tool-calling-101.ipynb
@@ -267,7 +267,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Excercise**: \n",
+    "## **Exercise**: \n",
     "- Create a tool call to fetch the user's name and age and make the model use it. "
    ]
   },
